--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier:check": "npx prettier  --check .",
+    "prettier:write": "npx prettier  --write .",
+    "eslint": "npx eslint \"**/*.js\""
   },
   "dependencies": {
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -16,6 +20,8 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "^8.28.0",
+    "prettier": "^2.8.0",
     "vite": "^3.2.3"
   }
 }
